--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Daniel, Connor, Kerry",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.58.0",
     "express": "^4.17.3"
   }
 }
