--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.58.0",
     "body-parser": "^1.20.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3"
   }
 }
