--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.58.0",
+    "@aws-sdk/client-s3": "^3.58.0",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3"
