--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.1109.0",
+    "cookie-parser": "^1.4.6"
   }
 }
